--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,43 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <com.google.android.material.textfield.MaterialAutoCompleteTextView
-        android:id="@+id/startAutoCompleteTextView"
+    <androidx.fragment.app.FragmentContainerView
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.135" />
+        android:layout_height="match_parent"
+        android:id="@+id/main_fragment_container"/>
 
-    <EditText
-        android:id="@+id/editTextDatabase"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:autofillHints="test"
-        android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@+id/startAutoCompleteTextView"
-        tools:layout_editor_absoluteX="-16dp" />
 
-    <EditText
-        android:id="@+id/price_edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDatabase" />
+<!--    <com.google.android.material.textfield.MaterialAutoCompleteTextView-->
+<!--        android:id="@+id/startAutoCompleteTextView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="64dp"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="0.135" />-->
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
-        android:text="submit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDatabase" />
+<!--    <EditText-->
+<!--        android:id="@+id/editTextDatabase"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="64dp"-->
+<!--        android:autofillHints="test"-->
+<!--        android:inputType="text"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/startAutoCompleteTextView"-->
+<!--        tools:layout_editor_absoluteX="-16dp" />-->
+
+<!--    <EditText-->
+<!--        android:id="@+id/price_edit_text"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="64dp"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/editTextDatabase" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/button"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="112dp"-->
+<!--        android:text="submit"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/editTextDatabase" />-->
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_bar"
