--- a/app/src/main/res/layout/brand_spinner_item.xml
+++ b/app/src/main/res/layout/brand_spinner_item.xml
@@ -8,6 +8,7 @@
         android:id="@+id/train_brand_spinner_item_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:padding="8dp"/>
+        android:padding="12dp"
+        android:textSize="24sp"
+        android:textAlignment="textStart"/>
 </LinearLayout>
