--- a/app/src/main/res/layout/station_list_item.xml
+++ b/app/src/main/res/layout/station_list_item.xml
@@ -4,8 +4,12 @@
     android:layout_height="match_parent"
     android:mode="twoLine">
 
-<TextView android:id="@+id/station_name"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/station_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="12dp"
+        android:textAlignment="textStart"
+        android:textSize="24sp" />
 
 </LinearLayout>
