--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="@string/app_name"
                 android:fontFamily="sans-serif-medium"
-                android:textSize="20sp"/>
+                android:text="@string/app_name"
+                android:textSize="20sp" />
 
             <ImageView
                 android:id="@+id/main_options_icon"
@@ -37,57 +37,15 @@
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
-
-    <!--    <com.google.android.material.textfield.MaterialAutoCompleteTextView-->
-    <!--        android:id="@+id/startAutoCompleteTextView"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="64dp"-->
-    <!--        android:layout_marginTop="12dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.0"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"-->
-    <!--        app:layout_constraintVertical_bias="0.135" />-->
-
-    <!--    <EditText-->
-    <!--        android:id="@+id/editTextDatabase"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="64dp"-->
-    <!--        android:autofillHints="test"-->
-    <!--        android:inputType="text"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/startAutoCompleteTextView"-->
-    <!--        tools:layout_editor_absoluteX="-16dp" />-->
-
-    <!--    <EditText-->
-    <!--        android:id="@+id/price_edit_text"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="64dp"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/editTextDatabase" />-->
-
-    <!--    <Button-->
-    <!--        android:id="@+id/button"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginTop="112dp"-->
-    <!--        android:text="submit"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/editTextDatabase" />-->
-
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/main_fragment_container"
-
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_main_toolbar"
-
-        />
+        app:layout_constraintTop_toBottomOf="@+id/activity_main_toolbar" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_bar"
